// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/identity DELETE /:id - should delete 1`] = `[RepositoryEntityNotFoundError: Entity not found]`;

exports[`/identity GET /:id - should return identity information 1`] = `
Object {
  "address": Object {
    "country": "country",
    "locality": "locality",
    "postal_code": "postalCode",
    "region": "region",
    "street_address": "streetAddress",
  },
  "birth_date": "2000-01-01",
  "display_name": "displayName#1234",
  "family_name": "familyName",
  "gender": "gender",
  "given_name": "givenName",
  "gravatar": "https://gravatar.url/",
  "locale": "sv-SE",
  "middle_name": "middleName",
  "nickname": "nickname",
  "phone_number": "+46700000000",
  "picture": "https://picture.url/",
  "preferred_username": "preferredUsername",
  "profile": "https://profile.url/",
  "username": "username",
  "website": "https://website.url/",
  "zone_info": "Europe/Stockholm",
}
`;

exports[`/identity GET /:id - should return identity information 2`] = `
Object {
  "identity": Object {
    "display_name": Object {
      "data": Array [
        Object {
          "created": 2020-01-01T07:00:00.000Z,
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "display_name_created",
              "payload": Object {
                "name": "displayName",
                "numbers": Array [
                  1234,
                ],
              },
            },
          ],
          "id": "e3926ddb-ecaf-4f66-855a-d143af54953c",
          "name": "displayName",
          "numbers": Array [
            1234,
          ],
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
    "identity": Object {
      "data": Array [
        Object {
          "address": Object {
            "country": "country",
            "locality": "locality",
            "postalCode": "postalCode",
            "region": "region",
            "streetAddress": "streetAddress",
          },
          "birthDate": "2000-01-01",
          "created": 2020-01-01T07:00:00.000Z,
          "displayName": Object {
            "name": "displayName",
            "number": 1234,
          },
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "identity_created",
              "payload": Object {
                "address": Object {
                  "country": "country",
                  "locality": "locality",
                  "postalCode": "postalCode",
                  "region": "region",
                  "streetAddress": "streetAddress",
                },
                "birthDate": "2000-01-01",
                "familyName": "familyName",
                "gender": "gender",
                "givenName": "givenName",
                "locale": "sv-SE",
                "middleName": "middleName",
                "nickname": "nickname",
                "phoneNumber": "+46700000000",
                "picture": "https://picture.url/",
                "preferredUsername": "preferredUsername",
                "profile": "https://profile.url/",
                "website": "https://website.url/",
                "zoneInfo": "Europe/Stockholm",
              },
            },
          ],
          "familyName": "familyName",
          "gender": "gender",
          "givenName": "givenName",
          "gravatar": "https://gravatar.url/",
          "id": "e3926ddb-ecaf-4f66-855a-d143af54953c",
          "locale": "sv-SE",
          "middleName": "middleName",
          "nickname": "nickname",
          "phoneNumber": "+46700000000",
          "phoneNumberVerified": true,
          "picture": "https://picture.url/",
          "preferredUsername": "preferredUsername",
          "profile": "https://profile.url/",
          "updated": 2020-01-01T07:00:00.000Z,
          "username": "username",
          "version": 0,
          "website": "https://website.url/",
          "zoneInfo": "Europe/Stockholm",
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`/identity PATCH /:id - should update 1`] = `
Identity {
  "_address": null,
  "_birthDate": null,
  "_created": 2020-01-01T07:00:00.000Z,
  "_displayName": null,
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_created",
      "payload": Object {
        "address": null,
        "birthDate": null,
        "familyName": null,
        "gender": null,
        "givenName": null,
        "locale": null,
        "middleName": null,
        "nickname": null,
        "phoneNumber": null,
        "picture": null,
        "preferredUsername": null,
        "profile": null,
        "website": null,
        "zoneInfo": null,
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_given_name_changed",
      "payload": Object {
        "givenName": "new-givenName",
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_middle_name_changed",
      "payload": Object {
        "middleName": "new-middleName",
      },
    },
  ],
  "_familyName": null,
  "_gender": null,
  "_givenName": "new-givenName",
  "_gravatar": null,
  "_id": "0d573da5-97d7-44b1-8aee-9951e177d0b2",
  "_locale": null,
  "_middleName": "new-middleName",
  "_nickname": null,
  "_phoneNumber": null,
  "_phoneNumberVerified": false,
  "_picture": null,
  "_preferredUsername": null,
  "_profile": null,
  "_updated": 2020-01-01T07:00:00.000Z,
  "_username": null,
  "_version": 1,
  "_website": null,
  "_zoneInfo": null,
}
`;

exports[`/identity PATCH /:id/address 1`] = `
Identity {
  "_address": Object {
    "country": "country",
    "locality": "locality",
    "postalCode": "postalCode",
    "region": "region",
    "streetAddress": "streetAddress",
  },
  "_birthDate": null,
  "_created": 2020-01-01T07:00:00.000Z,
  "_displayName": null,
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_created",
      "payload": Object {
        "address": null,
        "birthDate": null,
        "familyName": null,
        "gender": null,
        "givenName": null,
        "locale": null,
        "middleName": null,
        "nickname": null,
        "phoneNumber": null,
        "picture": null,
        "preferredUsername": null,
        "profile": null,
        "website": null,
        "zoneInfo": null,
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_address_changed",
      "payload": Object {
        "address": Object {
          "country": "country",
          "locality": "locality",
          "postalCode": "postalCode",
          "region": "region",
          "streetAddress": "streetAddress",
        },
      },
    },
  ],
  "_familyName": null,
  "_gender": null,
  "_givenName": null,
  "_gravatar": null,
  "_id": "c8909659-a490-4d6c-88d3-6a01712b7c64",
  "_locale": null,
  "_middleName": null,
  "_nickname": null,
  "_phoneNumber": null,
  "_phoneNumberVerified": false,
  "_picture": null,
  "_preferredUsername": null,
  "_profile": null,
  "_updated": 2020-01-01T07:00:00.000Z,
  "_username": null,
  "_version": 1,
  "_website": null,
  "_zoneInfo": null,
}
`;

exports[`/identity PATCH /:id/username 1`] = `
Identity {
  "_address": null,
  "_birthDate": null,
  "_created": 2020-01-01T07:00:00.000Z,
  "_displayName": null,
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_created",
      "payload": Object {
        "address": null,
        "birthDate": null,
        "familyName": null,
        "gender": null,
        "givenName": null,
        "locale": null,
        "middleName": null,
        "nickname": null,
        "phoneNumber": null,
        "picture": null,
        "preferredUsername": null,
        "profile": null,
        "website": null,
        "zoneInfo": null,
      },
    },
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "identity_username_changed",
      "payload": Object {
        "username": null,
      },
    },
  ],
  "_familyName": null,
  "_gender": null,
  "_givenName": null,
  "_gravatar": null,
  "_id": "9318e77b-10bf-413a-89be-ca36056b8723",
  "_locale": null,
  "_middleName": null,
  "_nickname": null,
  "_phoneNumber": null,
  "_phoneNumberVerified": false,
  "_picture": null,
  "_preferredUsername": null,
  "_profile": null,
  "_updated": 2020-01-01T07:00:00.000Z,
  "_username": "new-username",
  "_version": 1,
  "_website": null,
  "_zoneInfo": null,
}
`;
